--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <img id="cow1" src="imgs/cow1.png">
             <a-asset-item id="roof1" src="models/roof.glb"></a-asset-item>
             <a-asset-item id="ava" src="models/ava.glb"></a-asset-item>
+            <a-asset-item id="base" src="models/base.glb"></a-asset-item>
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity>
@@ -74,18 +75,11 @@
         <!-- <a-gltf-model src="#ava" position="0 .96 0" scale="5 5 5"></a-gltf-model> -->
         <!--cows-->
         <a-entity position="-14.475 1.014 14.604" geometry="depth:0;height:2.31;width:2.5" material="transparent:true;src:#cow1" look-at="#cam"></a-entity>
-
+        <!--SMALL HOUSE ROOF-->
+        <a-gltf-model src="#roof1" position="-4.883 -1.767 -1.255" rotation="-23.548565379876834 -149.7711676471972 -12.776958831417359" scale="22.5 22.7 22.5" gltf-model="models/roof.glb"></a-gltf-model>
         <!--SMALL HOUSE BASE-->
-        <a-entity position="-9.643 0 -4.495" geometry="primitive:sphere;radius:0.76" material=" src:#brown;repeat:3 3"></a-entity>
-        <a-entity position="-12.419 0 -4.954" geometry="primitive:sphere;radius:0.76" material="src:#brown;repeat:3 3"></a-entity>
-        <a-entity position="-10.634 0 -10.209" rotation="90.01166961505233 -169.42362002018442 0" geometry="radius:4.17;arc:30;radiusTubular:0.38;primitive:torus" material=" src:#brown;repeat:2 2"></a-entity>
-        <a-entity position="-10.39 0 -10.764" rotation="90.01166961505233 23.49126960036375 0" geometry="arc:70;radiusTubular:0.38;radius:6;primitive:torus" material="src:#brown;repeat:5 5"></a-entity>
-        <a-entity position="-8.41 0 -8.702" rotation="90.01166961505233 157.16232320438482 0" geometry="arc:30;radius:6.8;radiusTubular:0.38;primitive:torus" material=" src:#brown;repeat:3 3"></a-entity>
-        <a-entity position="-3.989 0 -11.805" rotation="90.01166961505233 -148.22418160034397 0" geometry="primitive:torus;arc:20;radius:11;radiusTubular:0.38" material="src:#brown;repeat:3 3"></a-entity>
-        <a-entity position="-5.997 0 -11.261" rotation="90.01166961505233 -135.84829322551818 0" geometry="primitive:torus;arc:15;radius:9;radiusTubular:0.38" material="src:#brown;repeat:3 3"></a-entity>
-        <a-entity position="-11.255 0 -11.299" rotation="90.012 -38.445 0" geometry="primitive:torus;arc:38;radius:7;radiusTubular:0.38" material="src:#brown;repeat:4 4"></a-entity>
-        <a-entity position="-8.819 0 -10.936" rotation="90.011669 84.511274 0" geometry="primitive:torus;arc:60;radius:4.5;radiusTubular:0.38" material="repeat:3 3;src:#brown;repeat:4 4"></a-entity>
-        <a-entity position="-9.218 0 -10.8" rotation="90.01166961505233 138.99956109873773 0" geometry="radius:4.7;arc:62;primitive:torus;radiusTubular:0.38" material="repeat:4 4;src:#brown;repeat:4 4"></a-entity>
+        <a-gltf-model src="#base" position="-5.168 -0.219 -19.514" rotation="-0.4583662361046586 -23.892340056955327 -0.4583662361046586" scale="21 21 21" gltf-model="models/base.glb"></a-gltf-model>
+
 
       <!--ENCLOSURE POSTS-->
         <a-entity position="-16.614 0.493 17.095" geometry="height:1.23;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
@@ -198,7 +192,7 @@
         <a-entity position="-14.698 1.143 -10.283" geometry="primitive:cylinder;height:2.5;radius:0.16" material="src:#wood2"></a-entity>
         <a-entity position="-13.686 1.143 -7.157" geometry="primitive:cylinder;height:2.5;radius:0.15" material="src:#wood2"></a-entity>
         <a-entity position="-11.853 1.143 -4.359" geometry="primitive:cylinder;height:2.5;radius:0.15" material="src:#wood1"></a-entity>
-           <!--SMALL HOUSE ROOF-->
+        
           <!--Timber beams-->
         <a-entity position="-10.691 4.096 -9.584" rotation="87.94902155258136 177.50232493152902 162.4335349195884" geometry="height:1.1101999;radius:0.03;primitive:cylinder" material="src:#wood2"></a-entity>
         <a-entity position="-11.134 3.942 -9.495" rotation="87.94902155258136 179.39308565546074 162.4335349195884" geometry="height:1.2302;radius:0.03;primitive:cylinder" material="src:#wood2"></a-entity>
@@ -323,8 +317,7 @@
         <a-entity position="-7.659 3.539 -8.418" rotation="84.16750010471793 79.35465462561902 -64.45775195221762" geometry="height:1.28;radius:0.03;primitive:cylinder" material="src:#wood2"></a-entity>
         <a-entity position="-10.432 4.223 -9.631" rotation="83.93831698666561 176.9866629159113 168.44959176846203" geometry="primitive:cylinder;height:0.971;radius:0.03" material="src:#wood1"></a-entity>
         <a-entity position="-9.957 4.498 -10.485" rotation="87.54795109598979 94.88181087366432 149.25550563157944" geometry="primitive:cylinder;height:0.6;radius:0.03" material="src:#wood2"></a-entity>
-        <!--turf-->
-        <a-gltf-model src="#roof1" position="-4.883 -1.767 -1.255" rotation="-23.548565379876834 -149.7711676471972 -12.776958831417359" scale="22.5 22.7 22.5" gltf-model="models/roof.glb"></a-gltf-model>
+        
 <!--small house door-->
         <a-entity position="-11.765 1.156 -3.691" rotation="-5.042028597151244 -57.3530752925954 -0.17188733853924698" geometry="depth:0.06;height:2.2" material="src:#wall2"></a-entity>
 <!--big house posts-->
@@ -346,21 +339,7 @@
         <a-entity position="5.767 2.576 -1.946" rotation="90.01166961505233 60 0" geometry="height:3.8;radius:0.15;primitive:cylinder" material="src:#wood2"></a-entity>
         <a-entity position="6.778 1.234 -7.106" geometry="height:2.7;radius:0.2;primitive:cylinder" material="src:#wood1"></a-entity>
 <!--big house bank-->
-        <a-entity position="7.343 0 -6.895" rotation="89.83978227651309 -81.53189424711614 0" geometry="arc:25;radius:7;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="6.099 0 -7.651" rotation="89.83978227651309 -54.029920080836625 0" geometry="radius:8;arc:20;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="7.967 0 -5.295" rotation="89.83978227651309 -36.89848200642502 0" geometry="radius:5;arc:20;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="4.068 0 -8.424" rotation="89.782486497 -29.507326449237397 0" geometry="arc:10;radius:10;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="4.265 0 -8.75" rotation="89.782486497 -22.230762451075943 0" geometry="arc:10;radius:10;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="4.275 0 -8.778" rotation="89.782486497 -12.547775713365029 0" geometry="primitive:torus;arc:10;radius:10" material="src:#brown"></a-entity>
-        <a-entity position="4.173 0 -8.268" rotation="89.782486497 -0.34377467707849396 0" geometry="primitive:torus;arc:10;radius:10" material="src:#brown"></a-entity>
-        <a-entity position="6.17 0 -8.411" rotation="89.782486497 10.198648753328653 0" geometry="radius:8;arc:12;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="6.229 0 -8.108" rotation="89.782486497 22.230762451075943 0" geometry="arc:10;radius:8;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="7.867 0 -8.164" rotation="89.782486497 36.66929888837269 0" geometry="radius:6.48;arc:10;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="6.503 0 -7.462" rotation="89.782486497 49.61814505832929 0" geometry="radius:8;arc:15;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="6.503 0 -7.462" rotation="89.782486497 49.61814505832929 0" geometry="radius:8;arc:15;primitive:torus" material="src:#brown"></a-entity>
-        <a-entity position="5.089 0 -0.206" rotation="89.782486497 76.31797831142566 0" geometry="primitive:torus;arc:8;radius:15" material="src:#brown"></a-entity><a-entity position="8.198 0 -8.657" rotation="89.782486497 68.58304807715955 0" geometry="radius:6;primitive:torus;arc:15" material="src:#brown"></a-entity>
-        <a-entity position="5.355 0 -0.183" geometry="radius:0.4;primitive:sphere" material="src:#brown"></a-entity>
-        <a-entity position="8.666 0 -14.786" geometry="primitive:sphere;radius:0.4" material="src:#brown" rotation="90 0 0"></a-entity>
+<a-gltf-model src="#base" position="13.396 -0.685 -20.326" rotation="-0.4583662361046586 -24.6371851906254 -0.4583662361046586" scale="26 24 28" gltf-model="models/base.glb"></a-gltf-model>
 
 <!--wood pile-->
       <a-entity position="7.441 0.138 8.988" geometry="height:3.2;radius:0.12;primitive:cylinder" material="src:#wood1" rotation="90.01166961505233 85.48530303351883 0"></a-entity>
