--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity>
-          <a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="240000" easing="linear" repeat="indefinite"></a-animation> 
+          <a-animation attribute="rotation" from="0 360 0" to="0  0" dur="360000" easing="linear" repeat="indefinite"></a-animation> 
           <a-entity id="cam" camera look-controls position="0 1.8 -15"> 
             <a-entity cursor position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: black; shader: flat"></a-entity> 
           </a-entity>
