--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           
         </div>
       </div>
+      <span class="btn" onclick="showSplash()"><strong><a href="#">back to start</a></strong></span>      
     <a-scene id="avascene" ava-environment>
         <a-assets>
             <img id="bg" src="imgs/bg.png">
@@ -70,7 +71,7 @@
         </a-entity>
         
         <a-sky src="#bg" theta-start="-2"></a-sky>
-        <a-plane src="#ground" height="40" width="40" position="0 0 0" rotation="-90 0 0" material="transparency:true;"></a-plane>
+        <a-plane src="#ground" height="40" width="40" position="0 0 0" rotation="-90 0 0"></a-plane>
   
         <!-- <a-gltf-model src="#ava" position="0 .96 0" scale="5 5 5"></a-gltf-model> -->
         <!--cows-->
