adds back to start btn

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           
         </div>
       </div>
-      <span class="btn" onclick="showSplash()"><strong><a href="#">back to start</a></strong></span>      
+      <span class="btn" onclick="showSplash()" style="z-index:5; max-width:10em;padding:.25em;margin:.25em;display:block; position:absolute;"><strong><a href="#">back to start</a></strong></span>
     <a-scene id="avascene" ava-environment>
         <a-assets>
             <img id="bg" src="imgs/bg.png">
